--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Nicholas R. Smith",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
+    "path": "^0.12.7"
   }
 }
