--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
