--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "mariadb": "^2.5.5",
     "path": "^0.12.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sanitize": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
